<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gas Mixer</string>
    <string name="blend">Blend</string>
    <string name="bestmix">Best Mix</string>
	<string name="he">% He:</string>
	<string name="o2">% O2:</string>
	<string name="pres_imperial">psi</string>
	<string name="pres_metric">bar</string>
	<string name="depth_imperial">fsw</string>
	<string name="depth_metric">msw</string>
	<string name="switch_to_metric">Metric</string>
	<string name="switch_to_imperial">Imperial</string>
	<string name="desired">Desired Mix</string>
	<string name="starting">Starting Mix</string>
	<string name="topup_mix">Top-Up Mix</string>
	<string name="button_blend">Blend</string>
	<string name="copy">Copy This</string>
	<string name="enough">Do I Have Enough Gas?</string>
	<string name="oxygen">Oxygen</string>
	<string name="helium">Helium</string>
	<string name="air">Air</string>
	<string name="no_mix">None</string>
	<string name="nitrogen">Nitrogen</string>
	<string name="maxdepth">Max Depth:</string>
	<string name="maxpo2">Max pO2:</string>
	<string name="maxend">Max END:</string>
	<string name="po2_hi">pO2 HI</string>
	<string name="mod">MOD:</string>
	<string name="ead">EAD:</string>
	<string name="end">END:</string>
	<string name="calculate">Calculate</string>
	<string name="blendit">Blend it</string>
	<string name="result_impossible">"Sorry, that can't be done! Check that the top-up mix is correct."</string>
	<string name="result_start_empty">Start with an empty tank</string>
	<string name="start_with">Start with %s</string>
	<string name="empty_tank">an empty tank</string>
	<string name="gas_amount">%1$s %2$s of %3$s</string>
	<string name="result_drain">Drain to %1$s %2$s</string>
	<string name="result_fillto">Fill to %1$s %2$s with %3$s</string>
	<string name="result_add">Add %s</string>
	<string name="result_topup">Top up with %s</string>
	<string name="result_end">End with %s</string>
	<string name="topup_result">Result is %s</string>
	<string name="bestis">Best mix</string>
	<string name="topup_reminder">Topped up with %s</string>
	<string name="topup_pres">Top-Up Pressure</string>
	<string name="topup">Top Up</string>
	<string name="set_topup">Set Top-Up Gas</string>
	<string name="settings">Settings</string>
	<string name="about">About</string>
	<string name="change">Change</string>
	<string name="close">Close</string>
	<string name="units">Units</string>
	<string name="temperature">Temperature</string>
	<string name="blend_opts">Blending options</string>
	<string name="gas_units_opts">Units and gas settings</string>
	<string name="reltemp_imperial">˚F</string>
	<string name="reltemp_metric">˚C</string>
	<string name="o2_is_narcotic">O2 Is Narcotic</string>
	<string name="o2_narcotic_summary">"Account for Oxygen when computing END's?"</string>
	<string name="max_norm_po2">Max Normal pO2</string>
	<string name="max_hi_po2">Max High pO2</string>
	<string name="topup_gas">Top-Up Gas</string>
	<string name="real_gas">Use Real Gas Equations</string>
	<string name="real_gas_summary">Improves accuracy of blend and topup calculations</string>
	<string name="add_he_first">Add Helium First</string>
	<string name="add_he_first_summary">When blending, add helium first instead of oxygen</string>
	<string name="scubatanks_needed">ScubaTanks Needed</string>
	<string name="scubatanks_message">"To get support for real gas (Van der Waals) mixing, you must install the free ScubaTanks application and choose the size of cylinder you will be filling.
If you don't want this, you can continue using the app with the less accurate ideal gas laws."</string>
	<string name="download_now">Download Now</string>
	<string name="use_ideal">Ideal Gas Only</string>
	<string name="analyze_warning">"(Don't forget to analyze!)"</string>
	<string name="about_text">%1$s v%2$s
		\n\nCopyright 2009-2010 Ben Roberts. divestoclimb@gmail.com.

		\n\nLicensed under the Apache License, Version 2.0 (the "License");
		you may not use any part of this distribution except in
		compliance with the License. You may obtain a copy of the
		License at http://www.apache.org/licenses/LICENSE-2.0 Unless
		required by applicable law or agreed to in writing, software
		distributed under the License is distributed on an "AS IS"
		BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
		express or implied. See the License for the specific language
		governing permissions and limitations under the License.

		\n\nThe matrix math library which supports the mixing calculations
		is JAMA http://math.nist.gov/javanumerics/jama/, a cooperative
		product of The MathWorks and the National Institute of
		Standards and Technology (NIST) which has been released to the
		public domain. Neither The MathWorks nor NIST assumes any
		responsibility whatsoever for its use by other parties, and
		makes no guarantees, expressed or implied, about its quality,
		reliability, or any other characteristic.

		\n\nThanks to Marcus Sundberg for providing common cylinder capacities
		in metric.
	</string>
</resources>