<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res/divestoclimb.gasmixer">
	<divestoclimb.gasmixer.TrimixPreference
		android:key="topup_gas"
		android:title="@string/topup_gas"
		android:defaultValue="0.21 0"
		android:dialogIcon="@drawable/topup_pick" />

	<divestoclimb.gasmixer.NumberPreference
		android:key="max_norm_po2"
		android:title="@string/max_norm_po2"
		android:defaultValue="1.4"
		app:unitLabel="ata:"
		app:textboxwidth="50sp"
		app:decimalplaces="2"
		app:increment="0.1"
		app:lowerlimit="0.4"
		app:upperlimit="1.4" />

	<divestoclimb.gasmixer.NumberPreference
		android:key="max_hi_po2"
		android:title="@string/max_hi_po2"
		android:defaultValue="1.6"
		app:unitLabel="ata:"
		app:textboxwidth="50sp"
		app:decimalplaces="2"
		app:increment="0.1"
		app:lowerlimit="0.4"
		app:upperlimit="1.6" />

	<CheckBoxPreference
		android:key="o2_is_narcotic"
		android:title="@string/o2_is_narcotic"
		android:summary="@string/o2_narcotic_summary"
		android:defaultValue="true" />

	<ListPreference
		android:key="units"
		android:title="@string/units" 
		android:entries="@array/units"
		android:entryValues="@array/unitvalues"
		android:dialogIcon="@drawable/units_imperial"
		android:defaultValue="0" />
</PreferenceScreen>