<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res/divestoclimb.gasmixer"
		android:paddingTop="5dp">
	<TextView
		android:id="@+id/desired_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/desired"
		android:paddingLeft="5dp"
		android:textSize="20sp"/>
	<divestoclimb.gasmixer.NumberSelector
		android:id="@+id/desired_pres"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		app:textboxwidth="75sp" />
	<TextView
		android:id="@+id/desired_pres_unit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toLeftOf="@id/desired_pres"
		android:layout_alignTop="@id/desired_pres"
		android:layout_marginTop="7sp" />
	<divestoclimb.gasmixer.TrimixSelector
		android:id="@+id/desired"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_below="@id/desired_pres" />
	<ToggleButton
		android:id="@+id/button_po2_hi"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/desired"
		android:layout_alignParentLeft="true"
		android:textOff="@string/po2_hi"
		android:textOn="@string/po2_hi" />
	<TextView
		android:id="@+id/desired_mod_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/button_po2_hi"
		android:layout_alignBaseline="@id/button_po2_hi"
		android:gravity="right"
		android:text="@string/mod"/>
	<TextView
		android:id="@+id/desired_mod"
		android:layout_width="85sp"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/desired_mod_label"
		android:layout_alignBaseline="@id/desired_mod_label"
		android:gravity="right"
		android:textSize="20sp"/>
	<TextView
		android:id="@+id/desired_ead_end"
		android:layout_width="90sp"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/desired_mod"
		android:layout_alignParentRight="true"
		android:gravity="right"
		android:textSize="20sp"/>
	<TextView
		android:id="@+id/desired_ead_end_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toLeftOf="@id/desired_ead_end"
		android:layout_alignBaseline="@id/desired_mod_label"
		android:gravity="right"/>

	<Button
		android:id="@+id/start_change"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/button_po2_hi"
		android:layout_alignParentRight="true"
		android:text="@string/change" />
	<TextView
		android:id="@+id/start_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/starting"
		android:layout_alignBaseline="@id/start_change"
		android:layout_alignParentLeft="true" />
	<TextView
		android:id="@+id/start_mix"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toLeftOf="@id/start_change"
		android:layout_alignBaseline="@id/start_label"
		android:gravity="right"
		android:textSize="20sp" />
	<Button
		android:id="@+id/button_blend"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:layout_below="@id/start_change"
		android:layout_centerHorizontal="true"
		android:text="@string/button_blend" />
</RelativeLayout>