<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
		 xmlns:app="http://schemas.android.com/apk/res/divestoclimb.gasmixer"
	android:id="@android:id/tabhost"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TabWidget
			android:id="@android:id/tabs"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		<FrameLayout
			android:id="@android:id/tabcontent"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<RelativeLayout
				android:id="@+id/tab_blend"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="5dp">
				<TextView
					android:id="@+id/desired_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/desired"
					android:paddingLeft="5dp"
					android:textSize="20sp"/>
				<divestoclimb.gasmixer.NumberSelector
					android:id="@+id/desired_pres"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_alignParentTop="true"
					app:textboxwidth="75sp" />
				<TextView
					android:id="@+id/desired_pres_unit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/desired_pres"
					android:layout_alignTop="@id/desired_pres"
					android:layout_marginTop="7sp" />
				<divestoclimb.gasmixer.TrimixSelector
					android:id="@+id/desired"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="15dp"
					android:layout_marginRight="15dp"
					android:layout_below="@id/desired_pres" />
				<ToggleButton
					android:id="@+id/button_po2_hi"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/desired"
					android:layout_alignParentLeft="true"
					android:textOff="@string/po2_hi"
					android:textOn="@string/po2_hi" />
				<TextView
					android:id="@+id/desired_mod_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toRightOf="@id/button_po2_hi"
					android:layout_alignBaseline="@id/button_po2_hi"
					android:gravity="right"
					android:text="@string/mod"/>
				<TextView
					android:id="@+id/desired_mod"
					android:layout_width="80sp"
					android:layout_height="wrap_content"
					android:layout_toRightOf="@id/desired_mod_label"
					android:layout_alignBaseline="@id/desired_mod_label"
					android:gravity="right"
					android:textSize="20sp"/>
				<TextView
					android:id="@+id/desired_ead_end"
					android:layout_width="90sp"
					android:layout_height="wrap_content"
					android:layout_alignBaseline="@id/desired_mod"
					android:layout_alignParentRight="true"
					android:gravity="right"
					android:textSize="20sp"/>
				<TextView
					android:id="@+id/desired_ead_end_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/desired_ead_end"
					android:layout_alignBaseline="@id/desired_mod_label"
					android:gravity="right"/>

				<Button
					android:id="@+id/start_change"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/button_po2_hi"
					android:layout_alignParentRight="true"
					android:text="@string/change" />
				<TextView
					android:id="@+id/start_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/starting"
					android:layout_alignBaseline="@id/start_change"
					android:layout_alignParentLeft="true" />
				<TextView
					android:id="@+id/start_mix"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/start_change"
					android:layout_alignBaseline="@id/start_label"
					android:gravity="right"
					android:textSize="20sp" />
				<Button
					android:id="@+id/button_blend"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="5dp"
					android:layout_marginRight="5dp"
					android:layout_below="@id/start_change"
					android:layout_centerHorizontal="true"
					android:text="@string/button_blend" />
			</RelativeLayout>
			

			<RelativeLayout
				android:id="@+id/tab_topup"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="5dp">
				<TextView
					android:id="@+id/topup_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/starting"
					android:paddingLeft="5dp"
					android:textSize="20sp"/>
				<divestoclimb.gasmixer.NumberSelector
					android:id="@+id/topup_start_pres"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_alignParentTop="true"
					app:textboxwidth="75sp" />
				<TextView
					android:id="@+id/topup_start_pres_unit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/topup_start_pres"
					android:layout_alignTop="@id/topup_start_pres"
					android:layout_marginTop="7sp" />
				<divestoclimb.gasmixer.TrimixSelector
					android:id="@+id/topup"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="15dp"
					android:layout_marginRight="15dp"
					android:layout_below="@id/topup_start_pres" />

				<TextView
					android:id="@+id/topup_pres_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/topup_pres"
					android:textSize="20sp"
					android:layout_below="@id/topup"
					android:paddingLeft="5dp" />
				<divestoclimb.gasmixer.NumberSelector
					android:id="@+id/topup_final_pres"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_below="@id/topup"
					app:textboxwidth="75sp" />
				<Button
					android:id="@+id/button_topup"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:layout_below="@id/topup_final_pres"
					android:text="@string/topup"/>
			</RelativeLayout>
			

			<RelativeLayout
				android:id="@+id/tab_bestmix"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingLeft="5dp">
				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/maxdepth"
					android:textSize="20dp"
					android:layout_marginTop="5dp"/>
				<divestoclimb.gasmixer.NumberSelector
					android:id="@+id/maxdepth"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="right"
					app:textboxwidth="60sp"
					android:layout_alignParentRight="true"
					android:layout_alignParentTop="true"
					android:layout_marginTop="5dp" />
				<TextView
					android:id="@+id/maxdepth_unit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/maxdepth"
					android:layout_alignTop="@id/maxdepth"
					android:layout_marginTop="7sp" />
				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/maxdepth"
					android:text="@string/maxpo2"
					android:textSize="20dp"/>
				<divestoclimb.gasmixer.NumberSelector
					android:id="@+id/maxpo2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_below="@id/maxdepth"
					app:textboxwidth="60sp"
					app:decimalplaces="2"
					app:increment="0.1"
					app:lowerlimit="0.4"
					app:upperlimit="1.6"/>
				<TextView
					android:id="@+id/maxpo2_unit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/maxpo2"
					android:layout_alignTop="@id/maxpo2"
					android:text="ata:"
					android:layout_marginTop="7sp" />
				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/maxpo2"
					android:text="@string/maxend"
					android:textSize="20dp"/>
				<divestoclimb.gasmixer.NumberSelector
					android:id="@+id/maxend"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="right"
					android:layout_alignParentRight="true"
					android:layout_below="@id/maxpo2"
					app:textboxwidth="60sp"/>
				<TextView
					android:id="@+id/maxend_unit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/maxend"
					android:layout_alignTop="@id/maxend"
					android:layout_marginTop="7sp" />
				<RelativeLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:layout_below="@id/maxend"
					android:layout_centerInParent="true">
					<TextView
						android:id="@+id/bestmix_label"
						android:width="70sp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:text="@string/bestmix" />

					<TextView
						android:id="@+id/bestmix_result"
						android:width="70sp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@id/bestmix_label"
						android:layout_alignParentLeft="true"
						android:gravity="center"
						android:textSize="20sp" />

					<Button
						android:id="@+id/bestmix_blend"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:width="100sp"
						android:layout_toRightOf="@id/bestmix_result"
						android:layout_alignParentTop="true"
						android:text="@string/blendit" />
				</RelativeLayout>
			</RelativeLayout>
		</FrameLayout>
	</LinearLayout>
</TabHost>