<?xml version="1.0" encoding="utf-8"?>
			<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/tab_topup"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">
			<LinearLayout 
				android:layout_width="fill_parent"
				android:layout_height="fill_parent" 
				android:orientation="vertical">
				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingLeft="5dp">
					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:layout_weight="1"
						android:text="@string/maxdepth"
						android:textSize="20dp"/>
					<TextView
						android:id="@+id/maxdepth_unit"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="fsw:"/>
					<Button
						android:id="@+id/minus_maxdepth"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="-"/>
					<EditText
						android:id="@+id/maxdepth"
						android:layout_width="60sp"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:numeric="decimal"/>
					<Button
						android:id="@+id/plus_maxdepth"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="+"/>
				</LinearLayout>
				
				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingLeft="5dp">
					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:layout_weight="1"
						android:text="@string/maxpo2"
						android:textSize="20dp"/>
					<TextView
						android:id="@+id/maxpo2_unit"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="ata:"/>
					<Button
						android:id="@+id/minus_maxpo2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="-"/>
					<EditText
						android:id="@+id/maxpo2"
						android:layout_width="60sp"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:numeric="decimal"/>
					<Button
						android:id="@+id/plus_maxpo2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="+"/>
				</LinearLayout>
				
				<LinearLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingLeft="5dp">
					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:layout_weight="1"
						android:text="@string/maxend"
						android:textSize="20dp"/>
					<TextView
						android:id="@+id/maxend_unit"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="fsw:"/>
					<Button
						android:id="@+id/minus_maxend"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="-"/>
					<EditText
						android:id="@+id/maxend"
						android:layout_width="60sp"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:numeric="decimal"/>
					<Button
						android:id="@+id/plus_maxend"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="+"/>
				</LinearLayout>

				<Button
					android:id="@+id/button_topup"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:text="@string/calculate"/>
			</LinearLayout>
			</ScrollView>